Use bigger font on smaller screens; fix when clicking same marker twice.

--- a/web/dev.scss
+++ b/web/dev.scss
@@ -8,7 +8,11 @@ $break1: 540px;
 }
 
 body {
-	font: 14px/22px arial, sans-serif;
+	font: 16px/24px arial, sans-serif;
+	@media(min-width: $break1) {
+		font-size: 14px;
+		line-height: 22px;
+	}
 	color: #333;
 	background-color: rgb(250, 250, 250);
 }
